Fix spacing using gaps

--- a/frontend/pages/SoftwarePage/SoftwareAddPage/SoftwareCustomPackage/_styles.scss
+++ b/frontend/pages/SoftwarePage/SoftwareAddPage/SoftwareCustomPackage/_styles.scss
@@ -1,7 +1,5 @@
 .software-custom-package {
-  &__gitops-banner {
-    margin: 1.5rem 0;
-  }
+  @include vertical-page-layout;
 
   &__premium-message {
     margin-top: $pad-xxxlarge;
